<resources>
    <string name="app_name">11_PD2_PA_Giruckis_Nikitins_2026</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="Registration_fragment_label">Registracija</string>
    <string name="MainPage_fragment_label">SakumaLogs</string>
    <string name="Login_fragment_label">Ielagošana</string>
    <string name="ProductList_fragment_label">Saraksti</string>
    <string name="Product_fragment_label">Produkti</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="Login_Text">Shoping List app</string>
    <string name="Login_UsernameText">Lietotājvards:</string>
    <string name="Login_PasswordText">Parole:</string>
    <string name="Login_SignInText">Ielagoties</string>
    <string name="Login_RegistrationText">Reģistreties</string>
    <string name="Login_UsernameInputText">Jusu Lietotājvards</string>


    <string name="Product_Text">Produkti</string>
    <string name="Product_Find_Text">Meklet:</string>
    <string name="Product_FilterFind_Text">Meklet Pec Filtriem:</string>
    <string name="ProductViewText1">Produkt 1</string>
    <string name="ProductViewText2">Produkt 2</string>
    <string name="ProductViewText3">Produkt 3</string>
    <string name="ProductViewText4">Produkt 4</string>
    <string name="ProductViewText5">Produkt 5</string>
    <string name="ProductViewText6">Produkt 6</string>
    <string name="Product_MainPage_Button_Text">uz sākuma logu</string>
    <string name="Product_FilterFind_Button_Text">Filtri</string>
    <string name="Product_Find_Button_Text">OK</string>

    <string name="List_Text">Saraksts</string>
    <string name="List_SummaButton_Text">Kopeja cena</string>
    <string name="List_DeleteProduct_Button_Text">Dzēst Produktu</string>
    <string name="List_MainPage_Button_Text">Uz sākuma logu</string>

    <string name="AdminLog_Text">Administratora logs</string>
    <string name="AdminLog_Tab_Text">Lietotaji</string>
    <string name="AdminLog_DeleteFind_Text">Meklet/Dzēst kontu</string>
    <string name="AdminLog_Find_Button_Text">Meklet</string>
    <string name="AdminLog_Delete_Button_Text">Dzēst</string>
    <string name="AdminLog_Logout">Iziet</string>

    <string name="Registration_Text">Reģestretracija</string>
    <string name="Registration_Name">Vards</string>
    <string name="Registration_Surname">Uzvards</string>
    <string name="Registration_Username">Lietotajvards</string>
    <string name="Registration_Email">epasts</string>
    <string name="Registration_Password">Parole</string>
    <string name="Registration_Password_2">Parole(atkartoti)</string>
    <string name="Registration_Reg_Button_Text">Reģestreties</string>
    <string name="Registration_SignIn_Button_Text">Ielagoties</string>

    <string name="main_page_button1">Saraksts</string>
    <string name="main_page_button2">Saraksts</string>
    <string name="main_page_button3">Saraksts</string>
    <string name="main_page_button4">Saraksts</string>
    <string name="main_page_button5">Izveidot jaunu sarakstu</string>
    <string name="main_page_button6">Ok</string>
    <string name="main_page_text">Sakuma lapa</string>
    <string name="main_page_text2">Meklet sarakstu</string>
    <string name="main_page_search">0</string>

    <string name="lorem_ipsum">Saraksts</string>

    <string name="Vards_Registration">Jusu Vards</string>
    <string name="Uzvards_Registration">Jusu Uzvards</string>
    <string name="Lietototajvards_Registration">Jusu Lietotajvards</string>
</resources>