<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAF5">

    <TextView
        android:id="@+id/main_page_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_page_text"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_page_FindText"
        android:layout_width="144dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/main_page_text2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_page_text" />

    <EditText
        android:id="@+id/main_page_search"
        android:layout_width="152dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"

        android:inputType="text"
        android:text="@string/main_page_search"
        app:layout_constraintEnd_toStartOf="@+id/main_page_search_button"
        app:layout_constraintStart_toEndOf="@+id/main_page_FindText"
        app:layout_constraintTop_toBottomOf="@+id/main_page_text"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/main_page_list1"
        android:layout_width="273dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#EFA441"
        android:text="@string/main_page_button1"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_page_search" />

    <Button
        android:id="@+id/main_page_list2"
        android:layout_width="273dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#EFA441"
        android:text="@string/main_page_button2"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_page_list1" />

    <Button
        android:id="@+id/main_page_list3"
        android:layout_width="273dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#EFA441"
        android:text="@string/main_page_button3"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_page_list2" />

    <Button
        android:id="@+id/main_page_list4"
        android:layout_width="273dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#EFA441"
        android:text="@string/main_page_button4"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_page_list3" />

    <Button
        android:id="@+id/main_page_newList_button"
        android:layout_width="323dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#D97706"
        android:text="@string/main_page_button5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/main_page_search_button"
        android:layout_width="73dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#D97706"
        android:text="@string/main_page_button6"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_page_text"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>