<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/List_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:text="@string/List_Text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/List_Summa_Button"
        android:layout_width="132dp"
        android:layout_height="42dp"
        android:backgroundTint="#2A9526"
        android:text="@string/List_SummaButton_Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toEndOf="@+id/List_Text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageView
        android:id="@+id/ListView1"
        android:layout_width="114dp"
        android:layout_height="114dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/ListView2"
        android:layout_width="114dp"
        android:layout_height="114dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/ListTextView2"
        app:layout_constraintEnd_toStartOf="@+id/ListView3"
        app:layout_constraintStart_toEndOf="@+id/ListView1"
        app:layout_constraintTop_toBottomOf="@+id/List_Text"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/ListView3"
        android:layout_width="114dp"
        android:layout_height="116dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/ListView4"
        android:layout_width="115dp"
        android:layout_height="116dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ListView1"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/ListView5"
        android:layout_width="121dp"
        android:layout_height="114dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/ListTextView5"
        app:layout_constraintEnd_toStartOf="@+id/ListView6"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/ListView4"
        app:layout_constraintTop_toBottomOf="@+id/ListTextView2"
        app:layout_constraintVertical_bias="1.0"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/ListView6"
        android:layout_width="114dp"
        android:layout_height="112dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ListView3"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/ListTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="40dp"
        android:text="@string/ProductViewText1"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/ListView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ListView1" />

    <TextView
        android:id="@+id/ListTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="16dp"
        android:text="@string/ProductViewText2"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/ListTextView3"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toEndOf="@+id/ListTextView1"
        app:layout_constraintTop_toBottomOf="@+id/List_Text" />

    <TextView
        android:id="@+id/ListTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="40dp"
        android:text="@string/ProductViewText3"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/ListView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ListView3" />

    <TextView
        android:id="@+id/ListTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/ProductViewText4"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ListView4"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/ListTextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="16dp"
        android:text="@string/ProductViewText5"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ListTextView6"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toEndOf="@+id/ListTextView4"
        app:layout_constraintTop_toBottomOf="@+id/ListTextView2"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/ListTextView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/ProductViewText6"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ListView6"
        app:layout_constraintVertical_bias="0.082" />

    <Button
        android:id="@+id/List_DeleteProduct_Button"
        android:layout_width="390dp"
        android:layout_height="47dp"
        android:backgroundTint="#2A9526"
        android:text="@string/List_DeleteProduct_Button_Text"
        app:layout_constraintBottom_toTopOf="@+id/List_MainPage_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ListTextView5"
        app:layout_constraintVertical_bias="0.886" />

    <Button
        android:id="@+id/List_MainPage_Button"
        android:layout_width="390dp"
        android:layout_height="46dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#2A9526"
        android:text="@string/List_MainPage_Button_Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>